examples/compute-resourcequota.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quota-compute-example
