examples/limitrange-with-resourcequota.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quota-policy-example
