examples/object-count-resourcequota.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quota-object-example
