examples/deployment-basic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example-web
  template:
    metadata:
      labels:
        app: example-web
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
