examples/01-reference-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-headless
spec:
  clusterIP: None
  selector:
    app: example
  ports:
    - name: tcp
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: example
spec:
  serviceName: example-headless
  replicas: 3
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
        - name: example
          image: redis:7.2-alpine
          ports:
            - name: redis
              containerPort: 6379
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
